--- a/build.gradle
+++ b/build.gradle
@@ -101,8 +101,8 @@ dependencies {
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
     compile 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
     
-	compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-35.2:api")
-    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-35.2")
+    compile fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-35.2")
+    compile fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-35.2:api")
 
     shade 'com.eliotlash.molang:molang:SNAPSHOT.12'
     shade 'com.eliotlash.mclib:mclib:SNAPSHOT.12'
