--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modImplementation "vazkii.patchouli:Patchouli:1.16.4-48-FABRIC"	
+    modApi "vazkii.patchouli:Patchouli:1.16.4-48-FABRIC"	
 
 
     // Actual dependencies
