--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: recursive
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -24,51 +26,12 @@ jobs:
       run: chmod +x gradlew
     - name: Assemble with Gradle
       run: ./gradlew --info assemble
+      env:
+        repsyUsername: ${{ secrets.repsyUsername }}
+        repsyPassword: ${{ secrets.repsyPassword }}
     - name: Test with Gradle
       run: ./gradlew --info test
-    - name: Docs with Gradle
-      run: ./gradlew --info javadoc
-    - name: Zip Test Results
-      if: ${{ always() }}
-      run: |
-        set -x
-        OLDWD=`pwd`
-        ls
-        cd ./build/reports/tests
-        zip -r "$OLDWD/reports.zip" test
-    - name: Zip Docs
-      if: ${{ always() }}
-      run: |
-        set -x
-        OLDWD=`pwd`
-        cd ./build/docs
-        zip -r "$OLDWD/docs.zip" javadoc
-    - name: Upload Test Results
-      uses: actions/upload-artifact@v2
-      if: ${{ always() }}
-      with:
-        name: reports.zip
-        path: reports.zip
-    - name: Upload Docs
-      uses: actions/upload-artifact@v2
-      if: ${{ always() }}
-      with:
-        name: docs.zip
-        path: docs.zip
-    - name: Upload Build
-      uses: actions/upload-artifact@v2
-      if: ${{ always() }}
-      with:
-        name: geckolib-1.15-1.0.0.jar
-        path: build/libs/geckolib-1.15-1.0.0.jar
-    - name: Deploy Docs to AWS S3
-      uses: jakejarvis/s3-sync-action@master
-      with:
-        args: --acl public-read --follow-symlinks --delete
       env:
-        AWS_S3_BUCKET: geckolib.bernie.software
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: 'us-west-1'   # optional: defaults to us-east-1
-        SOURCE_DIR: 'build/docs/javadoc'      # optional: defaults to entire repository
-        DEST_DIR: 'javadocs'
+        repsyUsername: ${{ secrets.repsyUsername }}
+        repsyPassword: ${{ secrets.repsyPassword }}
+
