--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=3.0.7
-archives_base_name=forge-1.15.2-geckolib
+mod_version=3.0.8
+archives_base_name=geckolib-forge-1.15.2
 geckolib_core_version=1.0.4
 
 #Publishing
