--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,7 +5,7 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ bedrock-renderer-dev, develop ]
+    branches: [ 1.16, 1.15.2 ]
   pull_request:
     branches: []
 
