Upgrade gradle, replace deprecated features

--- a/build.gradle
+++ b/build.gradle
@@ -54,11 +54,11 @@ dependencies {
 
 
     // Actual dependencies
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
-    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
-    compile 'com.eliotlash.molang:molang:SNAPSHOT.12'
-    compile 'com.eliotlash.mclib:mclib:SNAPSHOT.12'
-    compile project(':geckolib-core')
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
+    implementation 'com.eliotlash.molang:molang:SNAPSHOT.12'
+    implementation 'com.eliotlash.mclib:mclib:SNAPSHOT.12'
+    implementation project(':geckolib-core')
 
     // Shaded dependencies
     shade group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
@@ -94,7 +94,7 @@ jar {
                 "Specification-Vendor"    : "Gecko",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
-                "Implementation-Version"  : "${version}",
+                "Implementation-Version"  : "${project.mod_version}",
                 "Implementation-Vendor"   : "Gecko",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
