--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,7 @@ jar {
                 "Specification-Vendor"    : "Gecko",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
-                "Implementation-Version"  : "${project.mod_version}",
+                "Implementation-Version"  : project.mod_version,
                 "Implementation-Vendor"   : "Gecko",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
