--- a/build.gradle
+++ b/build.gradle
@@ -39,11 +39,14 @@ minecraft {
     mappings channel:"official", version:"1.16.5"
     runs {
         client {
-            workingDirectory project.file('run')
+            workingDirectory project.file('runs/' + name)
+            singleInstance true
+            taskName 'Client'
+
             property 'forge.logging.console.level', 'debug'
-            //For Mixin in other mods / Patchouli
-            properties 'mixin.env.remapRefMap': 'true'
+            property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${project.projectDir}/build/createSrgToMcp/output.srg"
+
             mods {
                 geckolib {
                     source sourceSets.main
@@ -51,12 +54,24 @@ minecraft {
             }
         }
 
+        clientAlt {
+            parent minecraft.runs.client
+            workingDirectory project.file('runs/' + name)
+            taskName 'ClientAlt'
+            args '--username', 'Alt'
+        }
+
         server {
-            workingDirectory project.file('run')
+            workingDirectory project.file('runs/' + name)
+            singleInstance true
+            taskName 'Server'
+
             property 'forge.logging.console.level', 'debug'
-            //For Mixin in other mods / Patchouli
-            properties 'mixin.env.remapRefMap': 'true'
+            property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${project.projectDir}/build/createSrgToMcp/output.srg"
+
+            args 'nogui'
+
             mods {
                 geckolib {
                     source sourceSets.main
@@ -65,12 +80,16 @@ minecraft {
         }
 
         data {
-            workingDirectory project.file('run')
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-            //For Mixin in other mods / Patchouli
-            properties 'mixin.env.remapRefMap': 'true'
+            workingDirectory project.file('runs/' + name)
+            singleInstance true
+            taskName 'Data'
+
+            property 'forge.logging.console.level', 'debug'
+            property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${project.projectDir}/build/createSrgToMcp/output.srg"
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/')
+
+            args '--mod', 'geckolib3', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+
             mods {
                 geckolib {
                     source sourceSets.main
