--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
-		maven { url  = 'https://plugins.gradle.org/m2/' }
+        maven { url = 'https://maven.minecraftforge.net/' }
+		maven { url = 'https://plugins.gradle.org/m2/' }
         jcenter()
         mavenCentral()
     }
@@ -98,6 +98,7 @@ minecraft {
         }
     }
 }
+
 repositories {
     maven { url 'https://repo.repsy.io/mvn/fadookie/particleman' }
     maven { url 'https://maven.enginehub.org/repo/' }
