--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
+        maven { url = 'https://maven.minecraftforge.net/' }
 		maven { url  = 'https://plugins.gradle.org/m2/' }
         jcenter()
         mavenCentral()
