--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=1.17-pre3
+minecraft_version=1.17-rc1
 geckolib_core_version=1.0.4
 
 # Fabric
-yarn_mappings=1.17-pre3+build.1
+yarn_mappings=1.17-rc1+build.1
 loader_version=0.11.3
 fabric_version=0.34.8+1.17
 
 # Mod Properties
-mod_version=3.0.1
+mod_version=3.0.2
 maven_group=software.bernie.geckolib
 archives_base_name=geckolib-fabric-1.17
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
