--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=1.17-rc1
-geckolib_core_version=1.0.4
+minecraft_version=1.17
+geckolib_core_version=1.0.4a
 
 # Fabric
-yarn_mappings=1.17-rc1+build.1
+yarn_mappings=1.17+build.1
 loader_version=0.11.3
-fabric_version=0.34.8+1.17
+fabric_version=0.34.9+1.17
 
 # Mod Properties
-mod_version=3.0.3
+mod_version=3.0.4
 maven_group=software.bernie.geckolib
 archives_base_name=geckolib-fabric-1.17
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
