Moved release building to the main page and added a new field for setting the display name to easily see which is fabric or forge

--- a/build.gradle
+++ b/build.gradle
@@ -206,7 +206,7 @@ if (file('key.properties').exists()) {
 
     project {
         apiKey = curseProp.getProperty('curseKey')
-        id = "398667"
+        id = "388172"
         releaseType = "beta"
         changelogType = 'text'
         changelog = file('changelog.txt')
@@ -217,7 +217,9 @@ if (file('key.properties').exists()) {
         relations {
             requiredDependency 'fabric-api'      
         }
-        mainArtifact(remapJar)
+        mainArtifact(remapJar) {
+      		displayName = "[FABRIC] Geckolib ${project.minecraft_version}"
+    	}
 
         afterEvaluate {
             uploadTask.dependsOn("remapJar")
