--- a/build.gradle
+++ b/build.gradle
@@ -56,9 +56,9 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    //modCompileOnly "vazkii.patchouli:Patchouli:1.16.4-48-FABRIC"	
-    modCompileOnly "com.terraformersmc:modmenu:2.0.0-beta.5"
-
+    modCompileOnly ("vazkii.patchouli:Patchouli:1.17-55-FABRIC-SNAPSHOT") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
 
     // Actual dependencies
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
