--- a/build.gradle
+++ b/build.gradle
@@ -154,6 +154,7 @@ publishing {
         mavenJava(MavenPublication) {
             artifact shadowJar
             artifact sourcesJar
+            artifact remapJar
             artifactId = project.archives_base_name
         }
     }
