--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=1.17.1
+minecraft_version=1.18_experimental-snapshot-7
 geckolib_core_version=1.0.4a
 
 # Fabric
-yarn_mappings=1.17.1+build.14
+yarn_mappings=1.18_experimental-snapshot-7+build.2
 loader_version=0.11.6
-fabric_version=0.37.2+1.17
+fabric_version=0.40.1+1.18_experimental
 
 # Mod Properties
-mod_version=3.0.13
+mod_version=3.0.0
 maven_group=software.bernie.geckolib
 archives_base_name=geckolib-fabric-1.17
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
