--- a/build.gradle
+++ b/build.gradle
@@ -137,16 +137,20 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.17.1-37.0.58'
+    minecraft 'net.minecraftforge:forge:1.17.1-37.0.59'
     library 'com.eliotlash.molang:molang:SNAPSHOT.12'
     library 'com.eliotlash.mclib:mclib:SNAPSHOT.12'
-    library project(':geckolib-core')
+    library(project(':geckolib-core')) {
+        exclude group: 'org.apache.commons'
+    }
     library group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
     library group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
 
     shade 'com.eliotlash.molang:molang:SNAPSHOT.12'
     shade 'com.eliotlash.mclib:mclib:SNAPSHOT.12'
-    shade project(':geckolib-core')
+    shade(project(':geckolib-core')) {
+        exclude group: 'org.apache.commons'
+    }
     shade group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
     shade group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
 
