--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=1.18_experimental-snapshot-7
+minecraft_version=21w37a
 geckolib_core_version=1.0.4a
 
 # Fabric
-yarn_mappings=1.18_experimental-snapshot-7+build.2
-loader_version=0.11.6
-fabric_version=0.40.1+1.18_experimental
+yarn_mappings=21w37a+build.13
+loader_version=0.11.7
+fabric_version=0.40.3+1.18
 
 # Mod Properties
-mod_version=3.0.1
+mod_version=3.0.3
 maven_group=software.bernie.geckolib
 archives_base_name=geckolib-fabric-1.18
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
