--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ dependencies {
 
 shadowJar {
     configurations = [project.configurations.shade]
-    from sourceSets.main.allSource
+    from sourceSets.main.output
     duplicatesStrategy = 'exclude'
     relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
     relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
@@ -126,12 +126,6 @@ tasks.withType(JavaCompile).configureEach {
 	it.options.release = 16
 }
 
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    from sourceSets.main.allSource
-    classifier = 'sources'
-}
-
 artifacts {
     archives shadowJar
 }
@@ -146,15 +140,25 @@ jar {
 
 remapJar {
     dependsOn(shadowJar)
-    input.set(shadowJar.archivePath)
+    input = shadowJar.archivePath
 }
 
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifact shadowJar
-            artifact sourcesJar
-            artifact remapJar
+            artifact(jar) {
+                // Main dependency, in intermediary
+                builtBy remapJar
+            }
+            artifact(shadowJar) {
+                // Old dependency, only works with Yarn names
+                classifier = 'dev'
+            }
+            artifact(sourcesJar) {
+                // Sources, in intermediary
+                builtBy remapSourcesJar
+                classifier = 'sources'
+            }
             artifactId = project.archives_base_name
         }
     }
