--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,8 @@ dependencies {
     // Actual dependencies
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
-    implementation 'com.eliotlash.molang:molang:SNAPSHOT.17'
-    implementation 'com.eliotlash.mclib:mclib:SNAPSHOT.17'
+    implementation(include('com.eliotlash.molang:molang:SNAPSHOT.17'))
+    implementation(include('com.eliotlash.mclib:mclib:SNAPSHOT.17'))
     implementation project(':geckolib-core')
 
     // Shaded dependencies
