--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=21w44a
+minecraft_version=1.18-pre1
 geckolib_core_version=1.0.4a
 
 # Fabric
-yarn_mappings=21w44a+build.10
+yarn_mappings=1.18-pre1+build.2
 loader_version=0.12.5
-fabric_version=0.42.1+1.18
+fabric_version=0.42.2+1.18
 
 # Mod Properties
 mod_version=3.0.15
