--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=3.0.13
+mod_version=3.0.14
 # Basically forge automatically filters out jars with forge- in it as it assumes that's a forge jar, so its removed
-archives_base_name=geckolib-1.17.1
+archives_base_name=geckolib-1.17.1-forge
 geckolib_core_version=1.0.5
 
 #Publishing
